Fix styles for font, scrollbar, and timeline component

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,9 +11,19 @@
 	box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+	@apply w-1;
+}
+::-webkit-scrollbar-track {
+	@apply bg-dark-200;
+}
+::-webkit-scrollbar-thumb {
+	@apply bg-dark-50 rounded-full hover:bg-dark-100;
+}
+
 html {
 	scroll-behavior: smooth;
-	font-size: 14px;
+	font-size: 16px;
 	font-family: 'Poppins', sans-serif;
 	box-sizing: border-box;
 	-webkit-tap-highlight-color: transparent;
@@ -38,7 +48,7 @@ body {
 	@apply z-20 fixed right-0 bottom-8 md:hidden;
 
 	.download-btn {
-		@apply rounded bg-dark-200 mr-8 md:mr-20 px-4 py-2 uppercase relative
+		@apply rounded bg-dark-200 mr-8 md:mr-20 px-4 py-2
 		w-14 h-14 hover:bg-dark-50;
 
 		span {
@@ -48,7 +58,7 @@ body {
 }
 
 nav {
-	@apply md:px-20 md:pt-2 h-[70px] w-full bg-dark-100 fixed z-50 -top-1;
+	@apply md:px-20 md:pt-2 min-h-[70px] w-full bg-dark-100 fixed z-50 -top-1;
 
 	.nav-brand {
 		@apply flex justify-between z-20 relative bg-dark-100 px-8 py-4 md:px-0 md:shadow-none
@@ -106,11 +116,11 @@ section#about {
 
 			.timeline-dot {
 				@apply w-4 h-4 bg-dark-100 border-4 border-blue-400 absolute z-10 
-				rounded-lg left-[-33px] top-7;
+				rounded-lg left-[-38.5px] top-6;
 			}
 
 			.timeline-arrow {
-				@apply w-9 h-1 bg-blue-400 absolute z-0 -left-8 top-[30px];
+				@apply w-9 h-1 bg-blue-400 absolute z-0 -left-8 top-[29.5px];
 			}
 
 			.timeline-event {
@@ -134,7 +144,7 @@ section#about {
 			@apply md:right-full md:ml-0 md:mr-8 animate-slide-up;
 
 			.timeline-dot {
-				@apply md:left-full md:ml-[23px];
+				@apply md:left-full md:ml-[26px];
 			}
 
 			.timeline-arrow {
